FRAME - Se agregó bower con las dependencias. -  Se concatenaron todos los js y se eliminó de app.js la llamada a todos los scripts en forma individual. -  TODO: Estilos.

--- a/sales/inicio.html
+++ b/sales/inicio.html
@@ -160,15 +160,7 @@
 	
 	
 		<script src="//www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
-		<script type="text/javascript" src="js/lib/jquery-3.1.0.min.js?v4"></script>
-		<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/lib/angular.min.js?v4"></script>
-		<script type="text/javascript" src="js/lib/angular-route.min.js?v4"></script>
-		<script type="text/javascript" src="js/lib/angular-sanitize.min.js?v4"></script>
-		<script type="text/javascript" src="js/lib/angular-resource.min.js?v4"></script>
-		<script type="text/javascript" src="js/lib/angular-ui-router.min.js?v4"></script>
-												
-		<script type="text/javascript" src="js/lib/ui-bootstrap-tpls-2.5.0.min.js?v4"></script>
+		<script type="text/javascript" src="js/lib/libs.js"></script>
 		
 		
 		<script>
@@ -184,17 +176,10 @@
 		</script>
 		
 		
-		<script type="text/javascript" src="js/utils.js?v4"></script>
-		<script type="text/javascript" src="js/lazyUtils.js?v4"></script>
-		<script type="text/javascript" src="js/app.js?v4"></script>
-		<script type="text/javascript" src="js/directives.js?v4"></script>
-		
+		<script type="text/javascript" src="js/concat/scriptGlobalApp.js"></script>		
 		
 		<!-- NUEVO TAGGING -->
 		<script type="text/javascript" src="/fbin/mult/campaign/oferta/js/datalayer.js?v12"></script>	
-		<script type="text/javascript" src="/fbin/mult/campaign/oferta/js/funciones_dataLayer.js?v12"></script>	
+		<script type="text/javascript" src="/fbin/mult/campaign/oferta/js/funciones_dataLayer.js?v12"></script>
 	</body>
-
-
-	
 </html>
