--- a/sales/inicio.html
+++ b/sales/inicio.html
@@ -16,9 +16,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		
-		<link rel="stylesheet" href="css/lib/bootstrap.min.css">
-		<link rel="stylesheet" href="css/lib/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="css/base.css?v4" />
+		<link rel="stylesheet" href="css/libs-concat.min.css">
+		<link rel="stylesheet" href="css/globalStyle.css" />
 	</head>
 	<body>
 		<header>
